# middleware-cmake

./: CMakeLists.txt
bm_ffmpeg/: CMakeLists.txt
bmvid/: CMakeLists.txt
